--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 <H2 style="color: sandybrown;">Passive Treatment Options for Pain Management:</H2>
 <h3 style="color: gray;">Hot Or Cold Therapy:</h3> 
 <p>Both hot and cold therapy help to manage pain but each has a different effect on your body. Hot therapy involves using hot packs, warm towels, or heating pads to increase blood flow and relax muscles to reduce stiffness. Cold therapy involves using ice packs, cold compresses, or ice baths to reduce swelling and inflammation, and to numb an area in order to provide pain relief.</p>
-<h3 style="color: snow;">Electrical Stimulation/IFT:</h3>
+<h3 style="color: gray;">Electrical Stimulation/IFT:</h3>
 <p>This type of therapy uses electrical impulses to stimulate the nerves and muscles in the affected area. It helps to manage pain by temporarily blocking pain signals from reaching your brain, by releasing naturally produced pain-relieving chemicals called endorphins which help to reduce pain and promote a sense of well-being, and by relaxing muscles and reducing painful spasms. Depending on the nature of your condition, it may involve the use of a TENS, NMES or IFC unit to deliver the electrical stimulation.</p>
-<h3 style="color: snow;">Ultrasound:</h3>
+<h3 style="color: gray;">Ultrasound:</h3>
 <p>This type of therapy uses high-frequency sound waves to create thermal and non-thermal effects to help manage pain. Thermal effects refer to the creation of a gentle heat, which can help to relax your muscles, reduce inflammation and reduce pain. The non-thermal effects include cavitation and microstreaming. Cavitation refers to the creation of tiny shock waves and microstreaming refers to the increasing of the movement of cells and fluids within the affected area. Both can help to promote tissue repair and reduce pain.</p>
-<h3 style="color: snow;">Traction:</h3>
+<h3 style="color: gray;">Traction:</h3>
 <p>Traction is typically used to manage pain in the neck and lower back. It helps by applying a gentle pulling force to the affected area and stretching the spine, thereby reducing pressure on the nerves and discs. Most often this involves a manual traction table.</p>
-<h3 style="color: snow;">Manual Therapy:</h3>
+<h3 style="color: gray;">Manual Therapy:</h3>
 <p>Manual therapy is a hands-on treatment that involves the manipulation of muscles, joints, and soft tissues to help manage pain and improve mobility. It includes massage therapy, myofascial release, soft tissue mobilization, and joint mobilization. Massage therapy helps to reduce muscle tension, increase blood flow, and promote relaxation using various techniques such as stroking, kneading, and friction. Myofascial release helps to reduce pain and improve flexibility through the manipulation of the fascia, which is a layer of connective tissue that surrounds muscles and organs. Soft tissue mobilization helps to reduce pain and improve flexibility by manipulating the ligaments, tendons, and fascia surrounding a joint. And, joint mobilization helps to reduce pain and improve mobility by gently moving a joint through its range of motion.  </p>
 <H2 style="color: sandybrown;">>Pediatric Physiotherapy</H2>
 <img width="1300px" src="pediatric2.img.jpg" alt="">
 <H2 style="color: sandybrown;">Pediatric Physiotherapy Treatment</H2>
-<h3 style="color: snow;">Cerebral Palsy:</h3>
+<h3 style="color: gray;">Cerebral Palsy:</h3>
 <p>We are following treatment like exercise, massage, and other physical treatments to improve a child's motor skills, balance, flexibility, and strength, aiming to increase their independence and quality of life. Treatments include tailored strength training, stretching to prevent joint stiffness, balance exercises, and gait training to improve walking. Early intervention with physiotherapy gives children the best chance for improvement, with exercises often made fun and engaging to keep the child motivated.</p>
-<h3 style="color: snow;">Autism Spectrum Disorder (ASD):</h3>
+<h3 style="color: gray;">Autism Spectrum Disorder (ASD):</h3>
 <p>We addresses common motor difficulties like poor balance, coordination, and strength by improving gross motor skills, body awareness, and sensory processing through play-based and structured exercises. Interventions include activities for motor planning, strengthening, balance training, sensory integration, and hydrotherapy, aiming to increase functional independence and social interaction for children with ASD.</p>
-<h3 style="color: snow;">Down Syndrome:</h3>
+<h3 style="color: gray;">Down Syndrome:</h3>
 <p>We focuses on early intervention to improve motor skills, strength, posture, and balance, reducing the impact of muscle weakness and lax ligaments. Therapists create individualized, play-based plans, provide parent education for home-based activities, and help children achieve developmental milestones and greater independence. Interventions often include strength training, balance activities, and exercises to build coordination, while also preventing secondary joint problems and improving overall quality of life.</p>
-<h3 style="color: snow;">Spina Bifida:</h3>
+<h3 style="color: gray;">Spina Bifida:</h3>
 <p>We focuses on maximizing a child's functional independence through individualized treatment plans involving exercises, gait training, and the use of assistive devices like braces and wheelchairs. Early intervention is key to establishing baseline function, monitoring muscle imbalances and contractures, and teaching caregivers proper handling and positioning. Goals include improving strength, balance, and mobility, while preventing secondary complications such as pressure sores and joint deformities.</p>
-<h3 style="color: snow;">Neurodevelopmental Physiotherapy:</h3>
+<h3 style="color: gray;">Neurodevelopmental Physiotherapy:</h3>
 <p>This form of therapy is mainly focused on kids who have neurological disorders with gross motor developmental delay or kids with gross motor developmental delay without any other central nervous system insults. The techniques here aim to achieve gross motor milestones, manage spasticity, and improve balance and coordination. Some techniques include NDT(Neuro Developmental Therapy), CIMT (Constraint Induced Movement Therapy), Vojta technique, taping techniques, functional electrical stimulation, balance and coordination training, including Frenkels exercises. </p>
-<h3 style="color: snow;">Orthopedic Pediatric Physiotherapy:</h3><p>Kids who receive this service are largely those involved in sports, have congenital deformities, or have met with any injury to their muscles or ligaments. The approach is completely different, with strategies that include treating pain and spasms, improving strength and endurance, and correcting deformities and posture, with the aim of eventually bringing them back to their normal daily activities.
+<h3 style="color: gray;">Orthopedic Pediatric Physiotherapy:</h3><p>Kids who receive this service are largely those involved in sports, have congenital deformities, or have met with any injury to their muscles or ligaments. The approach is completely different, with strategies that include treating pain and spasms, improving strength and endurance, and correcting deformities and posture, with the aim of eventually bringing them back to their normal daily activities.
 
 Here the treatment includes using machines to relieve pain and spasms, scar mobilization, stretching and strengthening of the muscles, endurance training, contrast therapy, and heat and cold therapy.</p>
-<h3 style="color: snow;">Cardiopulmonary Pediatric Physiotherapy:</h3>
+<h3 style="color: gray;">Cardiopulmonary Pediatric Physiotherapy:</h3>
 <p>While the principles of the techniques used here remain quite the same as adults, the application change as this population is constantly growing. Techniques include chest physiotherapy, positioning, breathing exercises, respiratory muscle strengthening, and energy conservation techniques.</p>
 <H2 style="color: sandybrown;">>Occupational Therapy</H2>
 <img width="1300" src="ot.img.webp" alt="">
@@ -52,70 +52,70 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <p>Occupational therapy for adults can help patients regain independence, manage chronic conditions and enhance quality of life. While occupational therapy for children helps children meet specific milestones and skills, occupational therapy for adults focuses on restoring an adult’s capabilities to regain their independence.</p>
 <H2 style="color: sandybrown;">Why Would a Child Need Occupational Therapy?</H2>
 <p>Children who benefit from pediatric occupational therapy may have difficulty with:</p>
-<h3 style="color: snow;">>Coordination</h3>
-<h3 style="color: snow;">>Sensory processing</h3>
-<h3 style="color: snow;">>Cognitive skills</h3>
-<h3 style="color: snow;">>Self-regulation and coping skills</h3>
-<h3 style="color: snow;">>Visual-perceptual skills</h3>
+<h3 style="color: gray;">>Coordination</h3>
+<h3 style="color: gray;">>Sensory processing</h3>
+<h3 style="color: gray;">>Cognitive skills</h3>
+<h3 style="color: gray;">>Self-regulation and coping skills</h3>
+<h3 style="color: gray;">>Visual-perceptual skills</h3>
 <p>Some common health conditions that may require a child to see a pediatric occupational therapist include:</p>
-<h3 style="color: snow;">>Autism</h3>
-<h3 style="color: snow;">>Movement disorders</h3>
-<h3 style="color: snow;">>Developmental delays</h3>
-<h3 style="color: snow;">>Cerebral palsy</h3>
-<h3 style="color: snow;">>Neurotrauma</h3>
-<h3 style="color: snow;">>Sensory processing disorders</h3>
-<h3 style="color: snow;">>Learning challenges</h3>
+<h3 style="color: gray;">>Autism</h3>
+<h3 style="color: gray;">>Movement disorders</h3>
+<h3 style="color: gray;">>Developmental delays</h3>
+<h3 style="color: gray;">>Cerebral palsy</h3>
+<h3 style="color: gray;">>Neurotrauma</h3>
+<h3 style="color: gray;">>Sensory processing disorders</h3>
+<h3 style="color: gray;">>Learning challenges</h3>
 <H2 style="color: sandybrown;">What would we do an Adults Need Occupational Therapy</H2>
-<h3 style="color: snow;">>Concentration and memory exercises</h3>
-<h3 style="color: snow;">>Learning and practicing skills for work</h3>
-<h3 style="color: snow;">>Movement and perception exercises</h3>
-<h3 style="color: snow;">>Regain or maintain independence</h3>
-<h3 style="color: snow;">>Improve the quality of life</h3>
-<h3 style="color: snow;">>Manage chronic conditions</h3>
-<h3 style="color: snow;">>Prevent future injuries</h3>
+<h3 style="color: gray;">>Concentration and memory exercises</h3>
+<h3 style="color: gray;">>Learning and practicing skills for work</h3>
+<h3 style="color: gray;">>Movement and perception exercises</h3>
+<h3 style="color: gray;">>Regain or maintain independence</h3>
+<h3 style="color: gray;">>Improve the quality of life</h3>
+<h3 style="color: gray;">>Manage chronic conditions</h3>
+<h3 style="color: gray;">>Prevent future injuries</h3>
 <H2 style="color: sandybrown;">>Speech  Therapy</H2>
 <img width="1300" src="speech.img" alt="">
 <H2 style="color: sandybrown;">What Our Speech Therapists Specialized for Child Who have Following Difficulties</H2>
-<h3  style="color: snow;">>Difficulty With Answering Questions</h3>
-<h3 style="color: snow;">>Difficulty With Following Instruction</h3>
-<h3 style="color: snow;">>Weak Comprehension Of Stories/Passages</h3>
-<h3 style="color: snow;">>Weak Social Skills</h3>
-<h3 style="color: snow;">>Lack Of Communicative Intent</h3>
-<h3 style="color: snow;">>Voice Disorders</h3>
-<h3 style="color: snow;">>Dysphagia/Swallowing Difficulties</h3>
-<h3 style="color: snow;">>Weak Oral Motor Skills</h3>
-<h3 style="color: snow;">>Dyslexia</h3>
-<h3 style="color: snow;">>Weak Verbal Reasoning Skills</h3>
-<h3 style="color: snow;">>Incorrect Use Of Grammar/Sentence Structures</h3>
-<h3 style="color: snow;">>Limited Vocabulary</h3>
-<h3 style="color: snow;">>Simple Or Disorganized Narration</h3>
-<h3 style="color: snow;">>Weak  Imitation Skills</h3>
-<h3 style="color: snow;">>Speech Sound Errors</h3>
-<h3 style="color: snow;">>Poor Preverbal Skills</h3>
-<h3 style="color: snow;">>Stuttering</h3>
+<h3 style="color: gray;">>Difficulty With Answering Questions</h3>
+<h3 style="color: gray;">>Difficulty With Following Instruction</h3>
+<h3 style="color: gray;">>Weak Comprehension Of Stories/Passages</h3>
+<h3 style="color: gray;">>Weak Social Skills</h3>
+<h3 style="color: gray;">>Lack Of Communicative Intent</h3>
+<h3 style="color: gray;">>Voice Disorders</h3>
+<h3 style="color: gray;">>Dysphagia/Swallowing Difficulties</h3>
+<h3 style="color: gray;">>Weak Oral Motor Skills</h3>
+<h3 style="color: gray;">>Dyslexia</h3>
+<h3 style="color: gray;">>Weak Verbal Reasoning Skills</h3>
+<h3 style="color: gray;">>Incorrect Use Of Grammar/Sentence Structures</h3>
+<h3 style="color: gray;">>Limited Vocabulary</h3>
+<h3 style="color: gray;">>Simple Or Disorganized Narration</h3>
+<h3 style="color: gray;">>Weak  Imitation Skills</h3>
+<h3 style="color: gray;">>Speech Sound Errors</h3>
+<h3 style="color: gray;">>Poor Preverbal Skills</h3>
+<h3 style="color: gray;">>Stuttering</h3>
 <H2 style="color: sandybrown;">>Cognitive Behavioral Therapy</H2>
 <img width="1300" src="behaviour.img" alt="">
 <H2 style="color: sandybrown;">>What Our Behaviour Therapists practicing here</H2>
 <p>CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
-<h3 style="color: snow;">>Anxiety Or Panic Attacks</h3>
-<h3 style="color: snow;">>Depression</h3>
-<h3 style="color: snow;">>Eating Disorders</h3>
-<h3 style="color: snow;">>Obsessive-Compulsive Disorders</h3>
-<h3 style="color: snow;">>Substance Use Disorders</h3>
-<h3 style="color: snow;">>Bipolar Disorder</h3>
-<h3 style="color: snow;">>Phobias</h3>
-<h3 style="color: snow;">>Personality disorders</h3>
-<h3 style="color: snow;">>Schizophrenia</h3>
-<h3 style="color: snow;">>Post-Traumatic Stress Disorder</h3>
-<h3 style="color: snow;">>Fibromyalgia</h3>
-<h3 style="color: snow;">>Irritable Bowl Syndrome</h3>
-<h3 style="color: snow;">>Insomnia</h3>
-<h3 style="color: snow;">>Relationship problems or divorce</h3>
-<h3 style="color: snow;">>Stress or anger management</h3>
-<h3 style="color: snow;">>Abandonment or trust issues</h3>
-<h3 style="color: snow;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
-<h3 style="color: snow;">>Time management and procrastination</h3>
-<h3 style="color: snow;">>Low self-esteem.</h3>
+<h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
+<h3 style="color: gray;">>Depression</h3>
+<h3 style="color: gray;">>Eating Disorders</h3>
+<h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3>
+<h3 style="color: gray;">>Substance Use Disorders</h3>
+<h3 style="color: gray;">>Bipolar Disorder</h3>
+<h3 style="color: gray;">>Phobias</h3>
+<h3 style="color: gray;">>Personality disorders</h3>
+<h3 style="color: gray;">>Schizophrenia</h3>
+<h3 style="color: gray;">>Post-Traumatic Stress Disorder</h3>
+<h3 style="color: gray;">>Fibromyalgia</h3>
+<h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
+<h3 style="color: gray;">>Insomnia</h3>
+<h3 style="color: gray;">>Relationship problems or divorce</h3>
+<h3 style="color: gray;">>Stress or anger management</h3>
+<h3 style="color: gray;">>Abandonment or trust issues</h3>
+<h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
+<h3 style="color: gray;">>Time management and procrastination</h3>
+<h3 style="color: gray;">>Low self-esteem.</h3>
 <center><h2 style="color: purple;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3 style="color: purple;">Senior consultant</h3></center>
 <CEnter><H3 style="color: purple;">Pediatric & Neuro</H3></CEnter>
