--- a/index.html
+++ b/index.html
@@ -118,21 +118,22 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3 style="color: gray;">>Time management and procrastination</h3>
 <h3 style="color: gray;">>Low self-esteem.</h3>
-<center><h2>Meet  Our Experts</h2></center>
-<center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
-<center><h3 style="color: purple;">Senior consultant</h3></center>
-<CEnter><H3 style="color: purple;">Pediatric & Neuro</H3></CEnter>
-<center><h3 style="color: purple;">8+years Experience</h3></center>
-<center><h2 style="color: blueviolet;">>Mr.Thirugnana Sammantham BPT</h2></center>
-<CEnter><H3 style="color: purple;">Concultant physiotherapist</H3></CEnter>
-<center><h3 style="color: purple;">3+years Experience</h3></center>
-<center><h2 style="color: blueviolet;">>Miss.Bharathi BOT</h2></center>
-<CEnter><h3 style="color: purple;">Senior Consultant</h3></CEnter>
-<center><h3 style="color: purple;">Occupational Therapist</h3></center>
-<center><h3 style="color: purple;">8+Years Experience</h3></center>
-<CEnter><H2 style="color: blueviolet;">>Mr.Raja R BOT, ABA.,</H2></CEnter>
-<CEnter><H3 style="color: purple;">Consultant Occupational Therapist</H3></CEnter>
-<center><h3 style="color: purple;">3+Years Experience</h3></center>
+<center><h2 style="color: blueviolet;">Meet  Our Experts</h2></center>
+<center><h3 style="color: blueviolet;">Care you,at every step of the way</h3></center>
+<center><h2 style="color: purple;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
+<center><h3 style="color: peru;">Senior consultant</h3></center>
+<CEnter><H3 style="color: peru;">Pediatric & Neuro</H3></CEnter>
+<center><h3 style="color: peru;">8+years Experience</h3></center>
+<center><h2 style="color: purple;">>Mr.Thirugnana Sammantham BPT</h2></center>
+<CEnter><H3 style="color: peru;">Concultant physiotherapist</H3></CEnter>
+<center><h3 style="color: peru;">3+years Experience</h3></center>
+<center><h2 style="color: purple;">>Miss.Bharathi BOT</h2></center>
+<CEnter><h3 style="color: peru;">Senior Consultant</h3></CEnter>
+<center><h3 style="color: peru;">Occupational Therapist</h3></center>
+<center><h3 style="color: peru;">8+Years Experience</h3></center>
+<CEnter><H2 style="color: purple;">>Mr.Raja R BOT, ABA.,</H2></CEnter>
+<CEnter><H3 style="color: peru;">Consultant Occupational Therapist</H3></CEnter>
+<center><h3 style="color: peru;">3+Years Experience</h3></center>
 <H2 style="color: sandybrown;">About Us:</H2>
 <p style="color: rgb(53, 50, 50);">Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
