--- a/index.html
+++ b/index.html
@@ -139,5 +139,16 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
+
+<table>
+  <tr>
+    <th>Header 1</th>
+    <th>Header 2</th>
+  </tr>
+  <tr>
+    <td>Data 1A</td>
+    <td>Data 1B</td>
+  </tr>
+</table>
 </body>
 </html>
