--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 
 <table>
   <tr>
-    <th3 align="left" style="color: gray;">>Anxiety Or Panic Attacks</th3>
-    <th3 align="center" style="color: gray;">>Depression</th3>
+    <th style="color: gray;">>Anxiety Or Panic Attacks</th>
+    <th <center><h3 style="color: peru;">3+Years Experience</th>
   </tr>
 </table>
 </body>
