--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <table>
   <tr>
     <th style="color: gray;">>Anxiety Or Panic Attacks</th>
-    <th <center><h3 style="color: peru;">3+Years Experience</th>
+    <th align="center"style="color: gray;">>Depression </th>
   </tr>
 </table>
 </body>
