--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <table>
   <tr>
     <th style="color: gray;">>Anxiety Or Panic Attacks</th>
-    <th style="color: gray;" align="right">>Depression </th>
+    <center><th style="color: gray;">>Depression </th></center>
   </tr>
 </table>
 </body>
