--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 
 <table>
-  <tr>
+  <tr width="500px" align="center"
     <th style="color: gray;">>Anxiety Or Panic Attacks</th>
-    <center><th style="color: gray;">>Depression </th></center>
+    <th style="color: gray;">>Depression </th>
   </tr>
 </table>
 </body>
