--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 
 <table>
-  <tr width="500px" align="center"
-    <th style="color: gray;">>Anxiety Or Panic Attacks</th>
-    <th style="color: gray;">>Depression </th>
+  <tr>
+    <h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
+    <h3 style="color: gray;">>Depression</h3>
   </tr>
 </table>
 </body>
