--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 
 <table>
   <tr>
-    <h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
-    <h3 style="color: gray;">>Depression</h3>
+    <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
+    <th><h3 style="color: gray;">>Depression</h3></th>
   </tr>
 </table>
 </body>
