--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 
-<table width="100%" align="left">
+<table width="100%">
   <tr>
     <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
     <th><h3 style="color: gray;">>Depression</h3></th>
