--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
     <th><h3 style="color: gray;">>Eating Disorders</h3></th>
     <th><h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3></th>
   </tr>
+  <tr>
+    <th><h3 style="color: gray;">>Substance Use Disorders</h3></th>
+    <th><h3 style="color: gray;">>Bipolar Disorder</h3></th>
+  </tr>
 </table>
 <table width="50%">
   <tr>
