--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 
 <table width="80%" align="corner" border="1">
-  <tr>
-    <th><h3 align="corner" style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
+  <tr align="left"
+    <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
     <th><h3 style="color: gray;">>Depression</h3></th>
   </tr>
   <tr>
