--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 
 <table width="80%" align="center" border="1">
   <tr>
-    <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
+    <th><h3 style="color: gray;"text-align: left;>>Anxiety Or Panic Attacks</h3></th>
     <th><h3 style="color: gray;">>Depression</h3></th>
   </tr>
   <tr>
