--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 
 <table width="80%" align="center" border="1">
   <tr>
-    <th><h3 class="left-align"style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
-    <th><h3 class="left-align"style="color: gray;">>Depression</h3></th>
+    <td><h3 class="left-align"style="color: gray;">>Anxiety Or Panic Attacks</h3></td>
+    <td><h3 class="left-align"style="color: gray;">>Depression</h3></td>
   </tr>
   <tr>
     <td><h3 class="left-align"style="color: gray;">>Eating Disorders</h3></td>
