--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 
-<table width="90%" align="left" border="1" margin: 50px auto; /* Center the table itself */>
+<table height="20%" width="90%" align="left" border="1">
   <tr>
     <td><h3 class="left-align"style="color: gray;">>Anxiety Or Panic Attacks</h3></td>
     <td><h3 class="left-align"style="color: gray;">>Depression</h3></td>
