--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
     <td><h3 class="left-align"style="color: gray;">>Aggressive</h3></td>
   </tr>
 </table>
-
+</head>
+<body>
 <center><h2 style="color: rgb(83, 1, 83);">Meet  Our Experts</h2></center>
 <center><h4 style="color: rgb(83, 1, 83);">Care you,at every step of the way</h4></center>
 <center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
