--- a/index.html
+++ b/index.html
@@ -139,5 +139,12 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
+<div class="container">
+        <div class="text-item">
+            This is the first piece of text within the column.
+        </div>
+        <div class="text-item">
+            This is the second piece of text within the column.
+        </div>
 </body>
 </html>
